<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nicomoji"
        android:text="@string/login_failed"
        android:textAlignment="center"
        android:textSize="45sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="48dp"
        />

    <Button
        android:id="@+id/try_again_button"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        style="@style/MainActionButton"
        android:text="@string/try_again"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nicomoji"
        android:text="@string/no_account_yet"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        style="@style/MainActionButton"
        android:text="@string/register" />

    <TextView
        android:id="@+id/forgotten_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nicomoji"
        android:text="@string/forgotten_password"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"/>
</LinearLayout>