<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/obdButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        style="@style/MenuButton"
        android:text="@string/car_inspection"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/weatherButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/nawigacja_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        style="@style/MenuButton"
        android:text="@string/navigation"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/myRoutesButton"
        app:layout_constraintEnd_toStartOf="@+id/obdButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/myRoutesButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        style="@style/MenuButton"
        android:text="@string/my_routes"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/achievementsButton"
        app:layout_constraintEnd_toStartOf="@+id/weatherButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        style="@style/MenuButton"
        android:text="@string/weather"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/addRouteButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/achievementsButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        style="@style/MenuButton"
        android:text="@string/achievements"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@id/settingsButton"
        app:layout_constraintEnd_toStartOf="@+id/addRouteButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="24dp"
        style="@style/MenuButton"
        android:text="@string/settings"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logoutButton"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/addRouteButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        style="@style/MenuButton"
        android:text="@string/add_route"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        style="@style/MenuButton"
        android:text="@string/logout"
        android:backgroundTint="@android:color/holo_red_light"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>