<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/compassTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nicomoji"
            tools:text="Azimuth:\n120.0"
            android:textAlignment="center"
            android:lines="2"
            android:textSize="24sp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nicomoji"
            android:textAlignment="center"
            android:textSize="24sp"
            android:lines="2"
            tools:text="Speed:\n 20km/h" />

    </LinearLayout>

    <org.osmdroid.views.MapView xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/osmmap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#00000000" />

    <Button
        android:id="@+id/addRouteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MainActionButton"
        android:text="@string/add_route"
        android:layout_marginHorizontal="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BackButton1"
            android:layout_width="161dp"
            android:layout_height="55dp"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#FF50FF8B"
            android:fontFamily="@font/nicomoji"
            android:text="Back"
            android:textColor="#000000"
            android:textSize="24sp"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/warningButton"
            android:layout_width="182dp"
            android:layout_height="56dp"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="12dp"
            android:layout_toEndOf="@+id/BackButton1"
            android:backgroundTint="#FF50FF8B"
            android:fontFamily="@font/nicomoji"
            android:text="Warning"
            android:textColor="#000000"
            android:textSize="24sp"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</LinearLayout>